--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <script>
 function myFunction() {
-  document.getElementById("Love").innerHTML = "I Love You kanna";
+  document.getElementById("Love").innerHTML = "I Love You Baby";
 }
 </script>
 
