--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ function myFunction() {
 
 <script>
 function myFunction1() {
-  document.getElementById("Update").innerHTML = "I Miss You";
+  document.getElementById("Update").innerHTML = "I Miss You kanna";
 }
 </script>
 
